--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <div class="container">
       <h1>問題仮置き場</h1>
-      <p>Twitterで出題した Web制作初心者向け問題 を仮置き場です。</p>
+      <p>Twitterで投稿した Web制作初心者向け問題 を仮置き場です。</p>
       <a href="https://twitter.com/progshoshinsha" class="twitter-follow-button" data-show-count="false">Follow @twitter</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
@@ -38,6 +38,7 @@
       </ul>
 
 
+      <p>これからも投稿予定です。</p>
       <a href="https://twitter.com/progshoshinsha" class="twitter-follow-button" data-show-count="false">Follow @twitter</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
    </div>
 </body>
