--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
    <div class="container">
       <h1>問題仮置き場</h1>
-      <p>Twitterで投稿した Web制作初心者向け問題 の仮置き場です。</p>
+      <p class="text">Twitterで投稿した Web制作初心者向け問題 の仮置き場です。</p>
       <a href="https://twitter.com/progshoshinsha" class="twitter-follow-button" data-show-count="false">Follow @twitter</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
       <ul>
          <li>
-            <blockquote class="twitter-tweet question_1" data-lang="ja">
+            <blockquote class="twitter-tweet" data-lang="ja">
                <p lang="ja" dir="ltr">🙂初心者向け問題🙂 <br><br> ピンクの余白はpaddingですか？marginですか？ <a
                      href="https://twitter.com/hashtag/%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0%E5%88%9D%E5%BF%83%E8%80%85?src=hash&amp;ref_src=twsrc%5Etfw">#プログラミング初心者</a>
                   <a
@@ -37,6 +37,9 @@
          </li>
          <li>
             <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">😉初心者向け問題😉<br><br>黒丸がつくのは、olタグですか？ulタグですか？<a href="https://twitter.com/hashtag/%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0%E5%88%9D%E5%BF%83%E8%80%85?src=hash&amp;ref_src=twsrc%5Etfw">#プログラミング初心者</a><a href="https://twitter.com/hashtag/%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0%E5%AD%A6%E7%BF%92?src=hash&amp;ref_src=twsrc%5Etfw">#プログラミング学習</a><a href="https://twitter.com/hashtag/Web%E5%88%B6%E4%BD%9C?src=hash&amp;ref_src=twsrc%5Etfw">#Web制作</a> <a href="https://t.co/Bd3psxqxYX">pic.twitter.com/Bd3psxqxYX</a></p>&mdash; プログラミング初心者 (@progshoshinsha) <a href="https://twitter.com/progshoshinsha/status/1750317478973247753?ref_src=twsrc%5Etfw">January 25, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+         </li>
+         <li>
+            <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">😯初心者向け問題😯 <br><br> ここなど(画像1枚目)やここなど(画像2枚目)に表示もされる、サイトやページに題名を付けるためのタグは何でしょうか？<br><br> <a href="https://twitter.com/hashtag/%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0%E5%88%9D%E5%BF%83%E8%80%85?src=hash&amp;ref_src=twsrc%5Etfw">#プログラミング初心者</a> <br> <a href="https://twitter.com/hashtag/%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0%E5%AD%A6%E7%BF%92?src=hash&amp;ref_src=twsrc%5Etfw">#プログラミング学習</a> <br> <a href="https://twitter.com/hashtag/Web%E5%88%B6%E4%BD%9C?src=hash&amp;ref_src=twsrc%5Etfw">#Web制作</a> <a href="https://t.co/IppHvBqGTa">pic.twitter.com/IppHvBqGTa</a></p>&mdash; プログラミング初心者 (@progshoshinsha) <a href="https://twitter.com/progshoshinsha/status/1755132100846760084?ref_src=twsrc%5Etfw">February 7, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
          </li>
       </ul>
 
